@@ -1,3 +1,37 @@
+// package com.example.demo.security;
+
+// import com.example.demo.entity.UserAccount;
+// import com.example.demo.repository.UserAccountRepository;
+// import org.springframework.security.core.authority.SimpleGrantedAuthority;
+// import org.springframework.security.core.userdetails.User;
+// import org.springframework.security.core.userdetails.UserDetails;
+// import org.springframework.security.core.userdetails.UserDetailsService;
+// import org.springframework.security.core.userdetails.UsernameNotFoundException;
+// import org.springframework.stereotype.Service;
+
+// import java.util.Collections;
+
+// @Service
+// public class CustomUserDetailsService implements UserDetailsService {
+    
+//     private final UserAccountRepository userAccountRepository;
+    
+//     public CustomUserDetailsService(UserAccountRepository userAccountRepository) {
+//         this.userAccountRepository = userAccountRepository;
+//     }
+    
+//     @Override
+//     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+//         UserAccount user = userAccountRepository.findByEmail(email)
+//                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
+        
+//         return new User(
+//                 user.getEmail(),
+//                 user.getPassword(),
+//                 Collections.singletonList(new SimpleGrantedAuthority(user.getRole()))
+//         );
+//     }
+// }
 package com.example.demo.security;
 
 import com.example.demo.entity.UserAccount;
@@ -9,26 +43,29 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
-    
-    private final UserAccountRepository userAccountRepository;
-    
-    public CustomUserDetailsService(UserAccountRepository userAccountRepository) {
-        this.userAccountRepository = userAccountRepository;
+
+    private final UserAccountRepository repository;
+
+    public CustomUserDetailsService(UserAccountRepository repository) {
+        this.repository = repository;
     }
-    
+
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        UserAccount user = userAccountRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
-        
+    public UserDetails loadUserByUsername(String email)
+            throws UsernameNotFoundException {
+
+        UserAccount user = repository.findByEmail(email)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException("User not found"));
+
         return new User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority(user.getRole()))
+                List.of(new SimpleGrantedAuthority(user.getRole()))
         );
     }
 }
